# libdoxa

./: Cargo.toml  README.md  flake.nix
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: debug_render.rs  lib.rs  motorgroup.rs
src/path_planner/: compound.rs  cubic_parametric.rs  mod.rs
src/subsystems/: mod.rs  pneumatic.rs
src/subsystems/drivetrain/: actions.rs  drivetrain_pair.rs  mod.rs  voltage_pair.rs
src/subsystems/drivetrain/actions/: boomerang.rs  config.rs  drive_to_point.rs  forward.rs  lazy.rs  pure_pursuit.rs  pure_pursuit_action.rs  rotation.rs  seeking.rs  turn_to_point.rs  voltage.rs
src/subsystems/tracking/: mod.rs  tracking_data.rs  wheel.rs
src/tracking/: mod.rs
src/utils/: logger.rs  mod.rs  pose.rs  settling.rs  traits.rs  unwrap_expect_report.rs  vec2.rs
