[package]
name = "libdoxa"
description = "subsystem, tracking, and driving utilities for DOXA Robotics"
version = "0.2.0"
edition = "2024"

[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.8.0"
vexide-motorgroup = "2.2.0"
snafu = { version = "0.8.5", default-features = false, features = [
    "rust_1_81",
] }
log = "0.4.28"
pid = "4.0.0"
nalgebra = { version = "0.33.2", default-features = false, features = [
    "macros",
    "alloc",
    "libm",
] }
# vexide-embedded-graphics = { version = "0.1.0", git = "https://github.com/zabackary/vexide-embedded-graphics.git", branch = "perf/draw-target-impl" }
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }
tinybmp = "0.6.0"

[features]
default = []
unsafe_debug_render = []
